// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCard renders correctly with checkbox type 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-fxv6kq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #b5b7bd;
  fill: #f3f3f4;
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-fxv6kq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-zcznpu-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-zcznpu-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-zcznpu-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-16fu0ub-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #6d717c;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-fxv6kq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-zcznpu-CheckboxInput eqr7bqq2"
        id="checkbox"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16fu0ub-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and checked prop 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-fxv6kq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #b5b7bd;
  fill: #f3f3f4;
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-fxv6kq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-zcznpu-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-zcznpu-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-zcznpu-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-16fu0ub-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #6d717c;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="true"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-fxv6kq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-zcznpu-CheckboxInput eqr7bqq2"
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16fu0ub-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and disabled prop 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-fxv6kq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #b5b7bd;
  fill: #f3f3f4;
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-fxv6kq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-zcznpu-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-zcznpu-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-zcznpu-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-16fu0ub-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #6d717c;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-fxv6kq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-zcznpu-CheckboxInput eqr7bqq2"
        disabled=""
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16fu0ub-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and isError prop 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-fxv6kq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #b5b7bd;
  fill: #f3f3f4;
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-fxv6kq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-zcznpu-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-zcznpu-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-zcznpu-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-16fu0ub-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #6d717c;
}

.cache-1d1eisv-StyledText-PaddedText {
  color: #ac2740;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-fxv6kq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-describedby="radio-hint"
        aria-invalid="true"
        class="cache-zcznpu-CheckboxInput eqr7bqq2"
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16fu0ub-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    <p
      class="eqr7bqq4 cache-1d1eisv-StyledText-PaddedText e13y3mga0"
    />
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-fxv6kq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #b5b7bd;
  fill: #f3f3f4;
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-fxv6kq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-zcznpu-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-zcznpu-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-zcznpu-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-16fu0ub-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #6d717c;
}

<div
    aria-describedby=":rn:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <div
      class="cache-a9hy4l-Container e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-fxv6kq-CheckboxContainer-StyledElement eqr7bqq1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="cache-zcznpu-CheckboxInput eqr7bqq2"
          id="checkbox"
          name="checkbox"
          type="checkbox"
          value="choice"
        />
        <svg
          class="cache-1lcemq7-StyledIcon eqr7bqq3"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="cache-16fu0ub-InnerCheckbox eqr7bqq7"
              height="14"
              rx="2px"
              stroke-width="2"
              width="14"
              x="5"
              y="5"
            />
            <rect
              class="cache-1nkq693-CheckMixedMark eqr7bqq5"
              height="2"
              rx="1"
              width="8"
              x="8"
              y="11"
            />
            <rect
              class="cache-1nu9t2r-CheckMark eqr7bqq6"
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </g>
        </svg>
      </div>
      Checkbox card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with complex children 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-fxv6kq-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #b5b7bd;
  fill: #f3f3f4;
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-fxv6kq-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-fxv6kq-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-fxv6kq-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-fxv6kq-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-zcznpu-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-zcznpu-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-zcznpu-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-16fu0ub-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #6d717c;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-fxv6kq-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-zcznpu-CheckboxInput eqr7bqq2"
        disabled=""
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16fu0ub-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    <div
      style="background: gray; color: gray;"
    >
      Complex radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tf0e21-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1tf0e21-RadioContainer-StyledElement label {
  display: none;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1tf0e21-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-153jgd8-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w9n3gd-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-v3nsk0-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and checked prop 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tf0e21-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1tf0e21-RadioContainer-StyledElement label {
  display: none;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="true"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1tf0e21-RadioContainer-StyledElement ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-153jgd8-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w9n3gd-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-v3nsk0-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and disabled prop 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tf0e21-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1tf0e21-RadioContainer-StyledElement label {
  display: none;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-1tf0e21-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-153jgd8-RadioInput ehkrmld1"
        disabled=""
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w9n3gd-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-v3nsk0-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and isError prop 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tf0e21-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1tf0e21-RadioContainer-StyledElement label {
  display: none;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1tf0e21-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="true"
        class="cache-153jgd8-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w9n3gd-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-v3nsk0-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1tf0e21-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1tf0e21-RadioContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-1tf0e21-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1tf0e21-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1tf0e21-RadioContainer-StyledElement label {
  display: none;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    aria-describedby=":rl:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <div
      class="cache-a9hy4l-Container e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-1tf0e21-RadioContainer-StyledElement ehkrmld0"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-153jgd8-RadioInput ehkrmld1"
          id="radio-choice"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-w9n3gd-StyledIcon ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-v3nsk0-InnerCircleRing ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-ivayk3-RadioMark ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type checkbox 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-648h46-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-648h46-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-648h46-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-648h46-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-648h46-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-648h46-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #b5b7bd;
}

.cache-648h46-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #b5b7bd;
  fill: #f3f3f4;
}

.cache-648h46-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-648h46-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-648h46-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-648h46-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-648h46-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-648h46-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-648h46-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-648h46-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-648h46-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-648h46-CheckboxContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-648h46-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-zcznpu-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-zcznpu-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-zcznpu-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-zcznpu-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-zcznpu-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #ece5ff;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #fbe4e9;
  fill: #dd3252;
}

.cache-zcznpu-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #dd3252;
  fill: #fbe4e9;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-16fu0ub-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #6d717c;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-648h46-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-zcznpu-CheckboxInput eqr7bqq2"
        id="checkbox"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16fu0ub-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type radio 1`] = `
<DocumentFragment>
  .cache-a9hy4l-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-a9hy4l-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-a9hy4l-Container[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-a9hy4l-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-a9hy4l-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-15147wp-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-15147wp-RadioContainer-StyledElement[aria-disabled='false'],
.cache-15147wp-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-15147wp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-15147wp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-15147wp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-15147wp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-15147wp-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-15147wp-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-15147wp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-15147wp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-15147wp-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-15147wp-RadioContainer-StyledElement[data-error='true'] {
  color: #ac2740;
}

.cache-15147wp-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    class="cache-a9hy4l-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-15147wp-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-153jgd8-RadioInput ehkrmld1"
        id="checkbox-choice"
        name="checkbox"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-w9n3gd-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-v3nsk0-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;
